infrastructure/k8s/auth-mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongodb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongodb
  template:
    metadata:
      labels:
        app: auth-mongodb
    spec:
      containers:
        - name: auth-mongodb
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongodb-service
spec:
  selector:
    app: auth-mongodb
  ports:
    - name: database
      protocol: TCP
      port: 27017
      targetPort: 27017
